# agenticai

./: .env  README.md  pyproject.toml  requirements.txt
src/: 01_class.py
src/agents/: sample.py
src/agents/format/: dataformat.py
src/agents/tools/: calculator.py  weather.py
src/model/: llm.py
